// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuickViewButton /> should works with default props 1`] = `
<QuickViewButton
  className="btn"
  onClick={[MockFunction]}
  size={15}
>
  <div
    className="button btn"
    onClick={[MockFunction]}
    title="Быстрый просмотр"
  >
    <QuickViewSVG
      className="stroke"
      height={15}
      viewBox="0 0 24 24"
      width={15}
      xmlns="http://www.w3.org/2000/svg"
    >
      <svg
        className="stroke"
        height={15}
        viewBox="0 0 24 24"
        width={15}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0 1 11.5 20.5a9 9 0 1 1 9-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 0 1-2.122 2.122zM9 10h1V9a1.5 1.5 0 1 1 3 0v1h1a1.5 1.5 0 1 1 0 3h-1v1a1.5 1.5 0 1 1-3 0v-1H9a1.5 1.5 0 1 1 0-3zm2.5-4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12z"
        />
      </svg>
    </QuickViewSVG>
  </div>
</QuickViewButton>
`;

exports[`<QuickViewButton /> should works without props 1`] = `
<QuickViewButton>
  <div
    className="button"
    title="Быстрый просмотр"
  >
    <QuickViewSVG
      className="stroke"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <svg
        className="stroke"
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0 1 11.5 20.5a9 9 0 1 1 9-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 0 1-2.122 2.122zM9 10h1V9a1.5 1.5 0 1 1 3 0v1h1a1.5 1.5 0 1 1 0 3h-1v1a1.5 1.5 0 1 1-3 0v-1H9a1.5 1.5 0 1 1 0-3zm2.5-4.5a6 6 0 1 0 0 12 6 6 0 0 0 0-12z"
        />
      </svg>
    </QuickViewSVG>
  </div>
</QuickViewButton>
`;
